# src/main/java/backend/hobbiebackend/model/jwt/JwtResponse.java
@@ -8,5 +8,5 @@ import lombok.NoArgsConstructor;
 @AllArgsConstructor
 @NoArgsConstructor
 public class JwtResponse {
-    private String jwtToken;
+    private String accessToken;
 }
